# ros2_detect_package

./: .gitignore  Dockerfile  README.md  requirements.txt
detector/: package.xml  setup.py
detector/detector/: camera.py  debug_detector.py  detector.py  vizualizator.py
detector/launch/: yolov8s_detector.launch.py
launch/: package.xml
launch/launch/: launch_file.launch.py
objects_msgs/: CMakeLists.txt  package.xml
objects_msgs/msg/: DebugObject2D.msg  DebugObject2DArray.msg
objects_vis/: package.xml  setup.cfg  setup.py
objects_vis/launch/: test_draw_objects.launch.xml
objects_vis/src/objects_vis/: draw_objects.py  draw_objects3d.py  geometry.py  objects2markers.py  publish_random_objects.py  rect.py
