<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>objects_vis</name>
  <version>0.1.0</version>
  <description>The objects_vis package</description>
  <maintainer email="chepsiilya@gmail.com">Shepel Ilya</maintainer>
  <maintainer email="dandur.oak@gmail.com">Danil Tolkachev</maintainer>

  <license>TODO</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>objects_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
